// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Moveable /> > should render a moveable > moveable moved 1`] = `
<div>
  <div
    class="junipero moveable"
    style="transform: translate3d(100px, 100px, 0);"
  >
    Content
  </div>
</div>
`;

exports[`<Moveable /> > should render a moveable > moving 1`] = `
<div>
  <div
    class="junipero moveable moving"
    style="transform: translate3d(0px, 0px, 0);"
  >
    Content
  </div>
</div>
`;

exports[`<Moveable /> > should render a moveable 1`] = `
<div>
  <div
    class="junipero moveable"
    style="transform: translate3d(0px, 0px, 0);"
  >
    Content
  </div>
</div>
`;
